fix video autoplay for Iphone, align hero section features element on mobile, increase animation speed of the header

--- a/src/css/imports/_hexHeader.css
+++ b/src/css/imports/_hexHeader.css
@@ -39,7 +39,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    transition: all .4s linear;
+    transition: all .2s linear;
     z-index: 999;
 
 @media screen and (max-width: 1201px) {
